--- a/style.css
+++ b/style.css
@@ -9,6 +9,19 @@
 :root {
     font-family: Ubuntu, sans-serif;
     font-size: 18px;
+    line-height: 1.5;
+}
+
+@media (max-width: 600px) {
+    :root { 
+        font-size: 14px;
+    }
+}
+
+@media (max-width: 420px) {
+    :root {
+        font-size: 12px;
+    }
 }
 
 header {
@@ -26,6 +39,9 @@ section {
     background-position: center;
     background-size: cover;
     background-attachment: fixed;
+    display: flex;
+    align-items: center;
+    justify-content: center;
 }
 
 #spring {
@@ -124,4 +140,29 @@ footer a:hover img {
     100% {
         transform: rotate(360deg);
     }
+}
+
+article {
+    max-width: 800px;
+    background-color: rgba(0,0,0,0.5);
+    color: #fff;
+    padding: 2rem;
+    border-radius: 8px;
+    margin: 1rem;
+    transform: translate(0, 10rem);
+    opacity: 0;
+    transition: all 1s;
+}
+
+article.inviewport {
+    transform: translate(0, 0);
+    opacity: 1;
+}
+
+h2 {
+    font-size: 3rem;
+    line-height: 1;
+    margin-bottom: 1rem;
+    letter-spacing: -1px;
+    color: rgba(255,255,255,0.5);
 }
